# rendell-ui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Viewport.h
Shaders/: ShaderStorage.cpp
Widgets/: Anchor.h  IWidget.h  IWidgetCollection.h  Rectangle.cpp  Rectangle.h  Text.cpp  Text.h  Transform2D.cpp  Transform2D.h  Widget.cpp  Widget.h  WidgetHandlePipeline.cpp  WidgetHandlePipeline.h  WidgetRegistrator.cpp  WidgetRegistrator.h  WidgetRenderPipeline.cpp  WidgetRenderPipeline.h  rendell_widget.cpp  rendell_widget.h
include/rendell_ui/: Canvas.h  IFont.h  ITextModel.h  Signal.h  StringListModel.h  Timer.h  Viewport.h  color_defines.h  defines.h  font_loading.h  initialization.h  rendell_ui.h
include/rendell_ui/Docking/: DockCanvas.h  DockNode.h  DockSeparator.h  DockTree.h  DockTreeBuilder.h  DockableWindow.h  IDockNodeSeparator.h  IDockable.h
include/rendell_ui/Docking/Widgets/: DockHeaderWidget.h  DockRootWidget.h  DockSeparatorWidget.h  DockTitleBarWidget.h
include/rendell_ui/Memory/: Ref.h
include/rendell_ui/Widgets/: Anchor.h  AnchorableWidget.h  ButtonWidget.h  IScrollableWidget.h  IWidget.h  PageViewerWidget.h  RectangleWidget.h  ScrollbarWidget.h  TabBarWidget.h  TabButtonWidget.h  TextEditWidget.h  TextWidget.h  Widget.h
include/rendell_ui/Widgets/private/: Cursor.h  TextDrawer.h  TextEditor.h  TextEditorWord.h  TextRenderer.h  VisibleTextBuffer.h
include/rendell_ui/Window/: IWindow.h  Window.h  WindowCursorType.h  WindowEventHandler.h  window_input.h
internal/: ActionPool.h  Font.h  FontStorage.h  OStream.h  TextModel.h  logging.h
internal/Widgets/: RootWidget.h
src/: ActionPool.cpp  Canvas.cpp  Canvas.h  Font.cpp  FontStorage.cpp  Signal.h  StringListModel.cpp  Time.cpp  Time.h  Timer.cpp  Viewport.cpp  Viewport.h  Window.cpp  Window.h  WindowEventHandler.h  defines.h  font_loading.cpp  initialization.cpp  input.cpp  input.h  logging.cpp  rendell_ui.cpp
src/Docking/: DockCanvas.cpp  DockNode.cpp  DockTree.cpp  DockTreeBuilder.cpp  DockableWindow.cpp
src/Docking/Widgets/: DockHeaderWidget.cpp  DockRootWidget.cpp  DockSeparatorWidget.cpp  DockTitleBarWidget.cpp
src/Shaders/: RectangleShader.cpp  RectangleShader.h  Shader.cpp  Shader.h  ShaderStorage.cpp  ShaderStorage.h
src/String/: StringBuilder.cpp  StringBuilder.h  StringBuilderChunk.cpp  StringBuilderChunk.h  StringExtension.cpp  StringExtension.h
src/Text/: TextModel.cpp
src/Widgets/: Anchor.h  AnchorableWidget.cpp  ButtonWidget.cpp  ButtonWidget.h  IWidget.h  IWidgetCollection.h  PageViewerWidget.cpp  Rectangle.cpp  Rectangle.h  RectangleWidget.cpp  RectangleWidget.h  ScrollbarWidget.cpp  TabBarWidget.cpp  TabButtonWidget.cpp  Text.h  TextEdit.cpp  TextEdit.h  TextEditWidget.cpp  TextEditWidget.h  TextWidget.cpp  TextWidget.h  Transform2D.cpp  Transform2D.h  Widget.cpp  Widget.h  WidgetHandlePipeline.cpp  WidgetHandlePipeline.h  WidgetRegistrator.cpp  WidgetRegistrator.h  WidgetRenderPipeline.cpp  WidgetRenderPipeline.h  rendell_ui.cpp
src/Widgets/private/: Cursor.cpp  Cursor.h  RootWidget.cpp  TextDrawer.cpp  TextEditor.cpp  TextEditor.h  TextEditorWord.cpp  TextEditorWord.h  TextRendererEditor.cpp  TextRendererEditor.h
src/Window/: Window.cpp  Window.h  WindowEventHandler.cpp  WindowEventHandler.h  WindowManager.cpp  WindowManager.h  window_callbacks.cpp  window_callbacks.h  window_input.cpp  window_input.h
